Code cleanup: - Remove unused and un-necessary classes. - Remove un-necessary annotation. - Remove repeated classes.